<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDEDED"
    tools:context=".CoinDetailActivity">

    <ImageView
        android:id="@+id/ivLogoDetail"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

    <TextView
        android:id="@+id/tvFsym"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/purple_200"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tvSlash"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivLogoDetail"
        tools:text="BTC" />

    <TextView
        android:id="@+id/tvSlash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" / "
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tvTsym"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvFsym"
        app:layout_constraintTop_toBottomOf="@+id/ivLogoDetail" />

    <TextView
        android:id="@+id/tvTsym"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/teal_200"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvSlash"
        app:layout_constraintTop_toBottomOf="@+id/ivLogoDetail"
        tools:text="USD" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@android:color/white"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintTop_toBottomOf="@id/tvSlash"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvPriceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textSize="16sp"
                android:text="@string/price_detail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@android:color/holo_blue_dark"
                app:layout_constraintStart_toEndOf="@id/tvPriceLabel"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="7462.08" />

            <View
                android:id="@+id/viewTvPrice"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#9A9A9A"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvPrice"/>

            <TextView
                android:id="@+id/tvMinPriceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textSize="16sp"
                android:text="@string/min_price_detail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/viewTvPrice"/>

            <TextView
                android:id="@+id/tvMinPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textStyle="bold"
                android:textColor="@android:color/holo_red_light"
                android:textSize="16sp"
                tools:text="7144.12"
                app:layout_constraintStart_toEndOf="@id/tvMinPriceLabel"
                app:layout_constraintTop_toBottomOf="@id/viewTvPrice"/>

            <View
                android:id="@+id/viewTvMinPrice"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#9A9A9A"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvMinPrice"/>

            <TextView
                android:id="@+id/tvMaxPriceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textSize="16sp"
                android:text="@string/max_price_detail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/viewTvMinPrice"/>

            <TextView
                android:id="@+id/tvMaxPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textStyle="bold"
                android:textColor="@android:color/holo_green_light"
                android:textSize="16sp"
                tools:text="7144.12"
                app:layout_constraintStart_toEndOf="@id/tvMaxPriceLabel"
                app:layout_constraintTop_toBottomOf="@id/viewTvMinPrice"/>

            <View
                android:id="@+id/viewTvMaxPrice"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#9A9A9A"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvMaxPrice"/>

            <TextView
                android:id="@+id/tvLastDealLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textSize="16sp"
                android:text="@string/last_deal_detail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/viewTvMaxPrice"/>

            <TextView
                android:id="@+id/tvLastDeal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textStyle="bold"
                android:textSize="16sp"
                tools:text="Bitfinex"
                app:layout_constraintStart_toEndOf="@id/tvLastDealLabel"
                app:layout_constraintTop_toBottomOf="@id/viewTvMaxPrice"/>

            <View
                android:id="@+id/viewTvLastDeal"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#9A9A9A"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvLastDeal"/>

            <TextView
                android:id="@+id/tvLastUpdateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textSize="16sp"
                android:text="@string/update_detail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/viewTvLastDeal"/>

            <TextView
                android:id="@+id/tvLastUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textStyle="bold"
                android:textSize="16sp"
                tools:text="22:03:44"
                app:layout_constraintStart_toEndOf="@id/tvLastUpdateLabel"
                app:layout_constraintTop_toBottomOf="@id/viewTvLastDeal"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>




</androidx.constraintlayout.widget.ConstraintLayout>